<resources>
    <string name="app_name">Android Chess</string>

    <string name="play_chess_btn">Play Chess</string>
    <string name="recorded_games_btn">View Recorded Games</string>
    <string name="playback_game_btn">Playback</string>

    <string name="undo_btn">Undo</string>
    <string name="draw_btn">Draw</string>
    <string name="resign_btn">Resign</string>
    <string name="ai_btn">AI</string>
    <string name="draw_confirm">Draw???</string>

    <string name="check_title">Check!</string>
    <string name="check_ok_dialog">Ok</string>
    <string name="checkmate_title">Checkmate!</string>
    <string name="dialog_save_match_button">Save</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_save_match_message">Save this match?</string>
    <string name="stalemate_title">Stalemate!</string>
    <string name="dialog_title_hint">Match Title</string>
    <string name="resign_title">Resign!</string>
    <string name="draw_title">Draw!</string>
    <string name="next_btn"> Next Move</string>
    <string name="prev_btn"> Previous Move</string>

    <string name="promotion_title">Promotion!</string>
    <string name="promotion_message">Which promotion would you like to choose?</string>
    <string-array name="promotion_array">
        <item>Queen</item>
        <item>Knight</item>
        <item>Rook</item>
        <item>Bishop</item>
    </string-array>


</resources>
