<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context="jsutula.crejaud.androidchess.activity.ChessActivity">

    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chessboardGrid"
        android:numColumns="8"
        android:layout_weight="16">

    </GridView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerTurnTextView"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/undo_btn"
            android:id="@+id/undoBtn"
            android:onClick="undo"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ai_btn"
            android:onClick="ai"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/resign_btn"
            android:onClick="resign"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/draw_btn"
            android:onClick="draw"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
